[package]
name = "xbr"
version = "0.2.2"
edition = "2021"
authors = ["Iggy Zuk <hey@iggyzuk.com>"]
description = "A pixel art upscaler"
homepage = "https://github.com/iggyzuk/xbr"
repository = "https://github.com/iggyzuk/xbr"
documentation = "https://docs.rs/xbr"
readme = "README.md"
license = "MIT"
license-file = "LICENSE-MIT"
keywords = ["graphics", "image", "gamedev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xbr"

[dependencies]
image = { version = "0.24.7", optional = true }

[features]
image = ["dep:image"]

[[example]]
name = "process_image"
path = "examples/process_image.rs"
required-features = ["image"]
